--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,136 @@
-Flask==0.12.2
-gunicorn==19.7.1
+uwsgi==2.0.17
+Flask-uWSGI-WebSocket==0.6.0
+greenlet==0.4.13
+absl-py==0.1.12
 aniso8601==3.0.0
 asn1crypto==0.24.0
+astor==0.6.2
+backports.shutil-get-terminal-size==1.0.0
+backports.weakref==1.0.post1
 bcrypt==3.1.4
 beautifulsoup4==4.6.0
+bleach==1.5.0
 cachetools==2.0.1
-certifi==2017.11.5
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
 contextlib2==0.5.5
+crcmod==1.7
 cryptography==2.2.1
+decorator==4.2.1
 dill==0.2.7.1
 enum34==1.1.6
 firebase-admin==2.9.1
+Flask==0.12.2
 Flask-RESTful==0.3.6
 funcsigs==1.0.2
 future==0.16.0
-futures==3.2.0
+gapic-google-cloud-datastore-v1==0.15.3
+gapic-google-cloud-error-reporting-v1beta1==0.15.3
+gapic-google-cloud-logging-v2==0.91.3
+gast==0.2.0
 gax-google-logging-v2==0.8.3
 gax-google-pubsub-v1==0.8.3
 gcloud==0.17.0
+geotext==0.3.0
 google==2.0.1
+google-api-python-client==1.6.6
 google-api-core==1.1.0
 google-auth==1.4.1
+google-cloud==0.32.0
+google-cloud-bigquery==0.28.0
+google-cloud-bigquery-datatransfer==0.1.1
+google-cloud-bigtable==0.28.1
+google-cloud-container==0.1.1
 google-cloud-core==0.28.1
+google-cloud-datastore==1.4.0
+google-cloud-dns==0.28.0
+google-cloud-error-reporting==0.28.0
 google-cloud-firestore==0.29.0
+google-cloud-language==1.0.1
+google-cloud-logging==1.4.0
+google-cloud-monitoring==0.28.1
+google-cloud-pubsub==0.30.1
+google-cloud-resource-manager==0.28.1
+google-cloud-runtimeconfig==0.28.1
+google-cloud-spanner==0.29.0
+google-cloud-speech==0.32.1
 google-cloud-storage==1.8.0
+google-cloud-trace==0.17.0
+google-cloud-translate==1.3.1
+google-cloud-videointelligence==1.0.1
+google-cloud-vision==0.29.0
 google-gax==0.16.0
 google-resumable-media==0.3.1
 google-search==1.0.2
-Google-Search-API==1.1.13
 googleapis-common-protos==1.5.3
+grpc-google-iam-v1==0.11.4
 grpc-google-logging-v2==0.8.1
 grpc-google-pubsub-v1==0.8.1
-grpcio==1.10.0
+gunicorn==19.7.1
+html5lib==0.9999999
 httplib2==0.11.0
 idna==2.6
+ipaddr==2.2.0
 ipaddress==1.0.19
+ipython==5.5.0
+ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
 jws==0.1.3
 lxml==4.2.0
+Markdown==2.6.11
 MarkupSafe==1.0
+meld3==1.0.2
 mock==2.0.0
 mpg123==0.4
 numpy==1.14.2
+oauth2==1.9.0.post1
 oauth2client==3.0.0
+pandas==0.22.0
 paramiko==2.4.1
+pathlib2==2.3.0
 pbr==3.1.1
+pexpect==4.4.0
+pickleshare==0.7.4
 ply==3.8
+prompt-toolkit==1.0.15
+proto-google-cloud-datastore-v1==0.90.4
+proto-google-cloud-error-reporting-v1beta1==0.15.3
+proto-google-cloud-logging-v2==0.91.3
 protobuf==3.5.2.post1
+psutil==5.4.3
+ptyprocess==0.5.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
-PyAudio==0.2.11
 pycparser==2.18
 pycryptodome==3.4.3
 pydub==0.21.0
+Pygments==2.2.0
 PyNaCl==1.2.1
 Pyrebase==3.0.27
+python-dateutil==2.7.2
 python-firebase==1.2
 python-jwt==2.0.1
-pytz==2017.3
+pytz==2018.3
 PyYAML==3.12
 requests==2.18.4
 requests-toolbelt==0.7.0
 rsa==3.4.2
-selenium==2.53.6
+scandir==1.7
+simplegeneric==0.8.1
 six==1.11.0
 SpeechRecognition==3.8.1
 storage==0.0.4.3
+tensorboard==1.6.0
+termcolor==1.1.0
+traitlets==4.3.2
 Unidecode==1.0.22
+uritemplate==3.0.0
 urllib3==1.22
 vcrpy==1.11.1
+virtualenv==15.2.0
+wcwidth==0.1.7
 weather-api==0.0.4
 Werkzeug==0.14.1
 wrapt==1.10.11
